# arithmetic-coding-int

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  execute-detcap.sh  execute-perf.sh  execute-valid.sh
codings/: an_32.h  an_64.h  common.h  none_32.h  none_64.h  ones_comp_32.h  ones_comp_64.h  residue_32.h  residue_64.h  twos_comp_32.h  twos_comp_64.h
mul_validation/: Readme.md  evaluate.py  gentable.c  loggerinit.h  main.c  main_enc.c  mat.h  mul100.c  mul100.h  mul100_enc.c
plots/: Readme.md  common.py  makePlotFI.py  makePlots.py
plots/faultsim-res/perm/: results-val-mul-enc0.txt  results-val-mul-enc1.txt  results-val-mul-enc2.txt  results-val-mul-enc3.txt  results-val-mul-enc4.txt  results-val-mul-enc5.txt  results-val-mul-enc6.txt  results-val-mul0.txt  results-val-mul1.txt  results-val-mul2.txt  results-val-mul3.txt  results-val-mul4.txt  results-val-mul5.txt  results-val-mul6.txt
plots/faultsim-res/trans/: results-val-mul-enc0.txt  results-val-mul-enc1.txt  results-val-mul-enc2.txt  results-val-mul-enc3.txt  results-val-mul-enc4.txt  results-val-mul-enc5.txt  results-val-mul0.txt  results-val-mul1.txt  results-val-mul2.txt  results-val-mul3.txt  results-val-mul4.txt  results-val-mul5.txt
plots/perf-res/: perf_AN_32BIT.csv  perf_AN_64BIT.csv  perf_NONE_32BIT.csv  perf_NONE_64BIT.csv  perf_ONES_COMPLEMENT_32BIT.csv  perf_ONES_COMPLEMENT_64BIT.csv  perf_RESIDUE_32BIT.csv  perf_RESIDUE_64BIT.csv  perf_TWOS_COMPLEMENT_32BIT.csv  perf_TWOS_COMPLEMENT_64BIT.csv
src/detcap/: main.c
src/helpers/: coding_defines.h  helpers.c  helpers.h
src/performance/: genrand.c  main.c
